--- a/views/author_list.html
+++ b/views/author_list.html
@@ -3,19 +3,15 @@
     <table class="table table-striped">
         <thead>
             <tr>
-                <th>书名</th>
-                <th>出版社</th>
-                <th>书籍状态</th>
-                <th>还书日期</th>
+                <th>姓名</th>
+                <th>年龄</th>
             </tr>
         </thead>
         <tbody>
-            {{each book_list}}
+            {{each author_list}}
             <tr>
-                <td>{{$value.book.title}}</td>
-                <td>{{$value.imprint}}</td>
-                <td>{{$value.status}}</td>
-                <td>{{$value.due_back_formatted}}</td>
+                <td>{{$value.name}}</td>
+                <td>{{$value.lifespan}}</td>
                 <td><button class="btn btn-primary">修改</button>
                     <button class="btn btn-warning">删除</button>
                 </td>
