--- a/views/genre_list.html
+++ b/views/genre_list.html
@@ -1,21 +1,15 @@
-<h1>书籍实例</h1>
+<h1>种类信息</h1>
 <div class="table-responsive">
     <table class="table table-striped">
         <thead>
             <tr>
-                <th>书名</th>
-                <th>出版社</th>
-                <th>书籍状态</th>
-                <th>还书日期</th>
+                <th>种类名称</th>
             </tr>
         </thead>
         <tbody>
-            {{each book_list}}
+            {{each list_genres}}
             <tr>
-                <td>{{$value.book.title}}</td>
-                <td>{{$value.imprint}}</td>
-                <td>{{$value.status}}</td>
-                <td>{{$value.due_back_formatted}}</td>
+                <td>{{$value.name}}</td>
                 <td><button class="btn btn-primary">修改</button>
                     <button class="btn btn-warning">删除</button>
                 </td>
