--- a/views/book_list.html
+++ b/views/book_list.html
@@ -21,9 +21,9 @@
                     {{/each}}
                 </td>
                 <td>
-                    <button class="btn btn-primary">修改</button>
-                    <button class="btn btn-info" onclick="detailAuthorGet(`{{$value.id}}`)">详情</button>
-                    <button class="btn btn-warning">删除</button>
+                    <button class="btn btn-primary" onclick="updateBookget(`{{$value._id}}`)">修改</button>
+                    <button class="btn btn-info" onclick="detailBookGet(`{{$value._id}}`)">详情</button>
+                    <button class="btn btn-warning" onclick="deleteBookGet(`{{$value._id}}`)">删除</button>
                 </td>
             </tr>
             {{/each}}
